bricks: ci: Modificaçao no env
- Alterando a pasta do postgres

--- a/.env
+++ b/.env
@@ -16,10 +16,10 @@ PHP_FPM_APPLICATION=./laravel-docker-desafio-tecnico-back-end
 
 # POSTGRES ------------------------------------------------------------------------------------
 POSTGRES_PORT=5434
-POSTGRES_DATA=./docker/postgres/bddata/
+POSTGRES_DATA=./docker/postgres/data/
 POSTGRES_DB=desafiotecnicobackend
 POSTGRES_USER=desafiotecnicobackend
-POSTGRES_PASSWORD=desafiotecnicobackend
+POSTGRES_PASSWORD=laravel-docker-desafio-tecnico-back-end
 
 # PGADMIN ------------------------------------------------------------------------------------
 PGADMIN_DEFAULT_EMAIL=desafiotecnicobackend@gmail.com
